[tool.poetry]
name = "starlabs"
version = "0.1.0"
description = "work"
authors = ["dendi1613 <prasol.daniil2013@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
